<resources>
    <string name="app_name">Expensify</string>
    <string name="add_customer">Add Customer</string>
    <string name="Todo">todotwo</string>
    <string name="settings">Settings</string>
    <string name="confirm_button">Confirm</string>
    <string name="texthint">Name</string>
    <string name="textname">Name</string>
    <string name="phone_number_textbox">Phone number</string>
    <string name="todo">TODO</string>
    <string name="img">TODO</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="namebox">Name</string>
    <string name="phone_numberbox">Phone Number</string>
    <string name="confirmbtn">Confirm</string>
    <string name="mainbackground">TODO</string>
    <string name="you_will_give">You will give</string>
    <string name="give_amount">₹ 0</string>
    <string name="get_amount">₹ 11</string>
    <string name="you_will_get">You will get</string>
    <string name="Balance">Balance :</string>
    <string name="Balance_amount">₹ 11</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="amount">Amount</string>
    <string name="note">Note</string>
    <string name="received">Received</string>
    <string name="given">Given</string>
    <string name="add">Add</string>
    <string name="todo2">TODO</string>
    <string name="transactions">Transactions</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="sign_up">Sign Up</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_email2">Type your Email</string>
    <string name="type_your_password2">Type Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="update_transaction">Update transaction</string>
    <string name="description">Description</string>
    <string name="amount2">Amount</string>
    <string name="label">Label</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main">Main</string>
    <string name="home">Home</string>
    <string name="settings1">Settings</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
</resources>