<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:title="@string/main">
            <menu>
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        />
     <item
         android:id="@+id/nav_settings"
         android:title="@string/settings1"
         android:icon="@drawable/ic_baseline_settings_24"
         />
            </menu>
        </item>
 </group>

    <group android:checkableBehavior="single">
       <item android:title="@string/profile">
           <menu>
               <item
                   android:id="@+id/nav_login"
                   android:title="@string/login"
                   android:icon="@drawable/ic_baseline_login_24"
                   />
               <item
                   android:id="@+id/nav_logout"
                   android:title="@string/logout"
                   android:icon="@drawable/person"
                   />
           </menu>
       </item>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/share"
                android:icon="@drawable/ic_baseline_share_24"
                />
            <item
                android:id="@+id/nav_rate"
                android:title="@string/rate_us"
                android:icon="@drawable/ic_baseline_star_rate_24"
                />
        </menu>

    </item>
</menu>