<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:openDrawer="start"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Card view -->

        <androidx.cardview.widget.CardView
            android:id="@+id/Balance"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:id="@+id/total_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:text="Total Balance :"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/balance_amount"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginTop="15dp"
                android:text="@string/give_amount"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_label"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    >

                    <!--you_will_give text -->

                    <TextView

                        android:id="@+id/give"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="70dp"
                        android:text="@string/you_will_give"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <!--you_will_give_amount text -->

                    <TextView
                        android:id="@+id/give_amount"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="85dp"
                        android:text="@string/give_amount"
                        android:textAlignment="center"
                        android:textColor="#2E7D32"
                        android:textSize="18sp" />

                    <!--you_will_get text -->

                        <TextView
                            android:id="@+id/get"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="70dp"
                            android:text="@string/you_will_get"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <!--you_will_get_amount text -->

                    <TextView
                        android:id="@+id/get_amount"
                        android:layout_width="150dp"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="58dp"
                        android:text="@string/get_amount"
                        android:textColor="#DD2C00"
                        android:textSize="18sp" />

                </RelativeLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fafafa"
            tools:context=".MainActivity">

            <!--- Total balance -->


            <TextView
                android:id="@+id/transid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="200dp"
                android:text="@string/transactions"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Nested Scroll view for recycler view -->

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="300dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transid">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.core.widget.NestedScrollView>

            <!-- Add customer button-->

            <Button
                android:id="@+id/add_customer"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/baloo"
                android:text="@string/add_customer"
                android:textAllCaps="false"
                android:textColor="#212121"
                android:theme="@android:style/Theme.Holo"
                app:icon="@drawable/addperson"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.927"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transid"
                app:layout_constraintVertical_bias="0.932" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/frameLayout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Navigation bar-->

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"/>



</androidx.drawerlayout.widget.DrawerLayout>